--- a/docbrains-campaign-pricing/index.html
+++ b/docbrains-campaign-pricing/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="See Pricing for BocBrains Systematic Data Extraction Software. Find All the Details on DocBrains Pricing in Order to Select the Plan That’s Best for Your Business" />
+        content="See Pricing for DOCBrains Systematic Data Extraction Software. Find All the Details on DOCBrains Pricing in Order to Select the Plan That’s Best for Your Business" />
     <meta name="keywords" content="" />
     <link rel="canonical" href="https://agibrains.com/docbrains-campaign-pricing" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -558,7 +558,8 @@
         </div>
     </div>
     <!-- mobile orange button -->
-    <a href="contact.html" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
+        <a href="https://www.agibrains.com/contact-sales/" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
+
     <!--End mobile orange button -->
     <!-- End Pilot Button  -->
 
