--- a/solutions/index.html
+++ b/solutions/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="DocBrains, Data Extraction from Complex and Unstructured Documents Using Artificial Intelligence and Machine Learning. Support Different Document's Structure." />
+        content="DOCBrains, Data Extraction from Complex and Unstructured Documents Using Artificial Intelligence and Machine Learning. Support Different Document's Structure." />
     <meta name="keywords" content="" />
     <link rel="canonical" href="https://agibrains.com/solutions/" />
 
