--- a/solutions/bank-credit-card-statements-parser/index.html
+++ b/solutions/bank-credit-card-statements-parser/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
-        content="DocBrains Is Bank Statement Parser Helping You to Extract Data Which Is Trapped in PDF Bank Statements & Credit Card Statements and Physical Images. AI Based-Document Digital Processing." />
+        content="DOCBrains Is Bank Statement Parser Helping You to Extract Data Which Is Trapped in PDF Bank Statements & Credit Card Statements and Physical Images. AI Based-Document Digital Processing." />
     <meta name="keywords" content="" />
     <link rel="canonical" href="https://agibrains.com/solutions/bank-credit-card-statements-parser/" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -457,7 +457,8 @@
         </div>
     </div>
     <!-- mobile orange button -->
-    <a href="contact.html" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
+        <a href="https://www.agibrains.com/contact-sales/" class="d-block d-md-none btn orangeBtn get-in-touch-mobile">Begin the free On-boarding</a>
+
     <!--End mobile orange button -->
     <!-- End Pilot Button  -->
 
