--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <title> DocBrains | AI-Powered Digital Processing Extraction and Document Parsing </title>
+    <title> DOCBrains | AI-Powered Digital Processing Extraction and Document Parsing </title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" href="favicon.ico">
     <meta name="description"
-        content="DocBrains Provides High-Quality Services for You to Find, Capture, and Extract Data Automatically from Unstructured Documents/Images and Data Extraction Services. Digital Processing Makes It Feasible to Detect and Track Hundreds of Targets Rather Than Individual Detection" />
+        content="DOCBrains Provides High-Quality Services for You to Find, Capture, and Extract Data Automatically from Unstructured Documents/Images and Data Extraction Services. Digital Processing Makes It Feasible to Detect and Track Hundreds of Targets Rather Than Individual Detection" />
     <meta name="keywords" content="" />
     <link rel="canonical" href="https://agibrains.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
